# horizonserver

./: .gitignore  README.md  docker-compose.yml
.docker/: dockerfile  dockerfile.release  production_config.toml
.github/workflows/: build.yml
bridge_grpc_plugin/: Cargo.toml  build.rs
bridge_grpc_plugin/proto/: bridgeservice.proto
bridge_grpc_plugin/src/: lib.rs
bridge_grpc_plugin/src/grpc/: client.rs
ds_game_server/: Cargo.toml
ds_game_server/src/: lib.rs
ds_player_authentication/: Cargo.toml
ds_player_authentication/src/: lib.rs
dyingstar/: Cargo.toml
dyingstar/src/: lib.rs
dyingstar_props/: Cargo.toml
dyingstar_props/src/: lib.rs
dyingstar_props/src/props/: box50cm.rs  mod.rs  player.rs  testplanet.rs
eco_grpc_plugin/: Cargo.toml
eco_grpc_plugin/src/: lib.rs
libs/grpc_bridge_lib/: Cargo.toml  Readme.md  build.rs
libs/grpc_bridge_lib/proto/: bridge.proto
libs/grpc_bridge_lib/src/: lib.rs
libs/grpc_bridge_lib/src/grpc/: client.rs
persistance_grpc_plugin/: Cargo.toml
persistance_grpc_plugin/src/: lib.rs
scripts/: build.sh  install.sh  run.sh
