[package]
name = "plugin_ds_game_server"
version = "0.1.0"
edition = "2021"
description = "Sample Horizon plugin demonstrating core functionality"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/Far-Beyond-Dev/your-plugin"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Event system (CLI will update this to horizon_event_system)
horizon_event_system = { path = "../Horizon/crates/horizon_event_system" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
tracing = { version = "0.1", features = ["log"] }
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Optional: Additional commonly used dependencies
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-tungstenite = "0.27.0"
url = "2.5.7"
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
futures = "0.3"
websocket = "0.27"

[dev-dependencies]
tokio-test = "0.4"
